--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@import "assets/scss/reset";
+@import "assets/scss/typography";
+@import "assets/scss/variables";
+@import "assets/scss/general";
+
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
