--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -1,18 +1,8 @@
 <div class="book-list">
-  @for (book of books; track book) {
-    <mat-card class="book-card" (click)="openDetail(book)">
-      <mat-card-header>
-        <mat-card-title>{{ book.title }}</mat-card-title>
-        <mat-card-subtitle>{{ book.author }} - {{ book.year }}</mat-card-subtitle>
-      </mat-card-header>
-      <img mat-card-image [src]="book.coverImage || '/assets/icons/svg/no-photo.svg'" alt="{{ book.title }} cover">
-      <mat-card-actions>
-        <button mat-button (click)="editBook(book)">Edit</button>
-        <button mat-button (click)="deleteBook(book)">Delete</button>
-      </mat-card-actions>
-    </mat-card>
-    <app-book [book]="book"></app-book>
+  @for (book of books$ | async; track book) {
+      <app-book class="book" [book]="book"></app-book>
+
   } @empty {
-    No available books!
+    <p>No available books!</p>
   }
 </div>
