--- a/src/app/components/book-list/book-list.component.scss
+++ b/src/app/components/book-list/book-list.component.scss
@@ -1,10 +1,20 @@
-.book-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-}
+@import '../../../assets/scss/mixins';
+@import '../../../assets/scss/variables';
 
-.book-card {
-  cursor: pointer;
-  max-width: 300px;
+.book-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
+  @include minWidth($small-tablet-breakpoint) {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  @include minWidth($large-tablet-breakpoint) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  @include minWidth($laptop-breakpoint) {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  }
 }
