--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar color="primary">
-  <span>© 2024 Top Book App</span>
+<mat-toolbar color="primary" >
+  <mat-toolbar-row class="container"><span>© Top Book 2024</span></mat-toolbar-row>
 </mat-toolbar>
