--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,12 @@
 <mat-toolbar color="primary">
-  <img src="/assets/icons/svg/logo.svg" width="40" height="40" alt="logo">
-  <span>Top Book App</span>
-  <span class="spacer"></span>
-  <button mat-button routerLink="/">Home</button>
-  <button mat-button routerLink="/add">Add Book</button>
+  <mat-toolbar-row class="container">
+    <span class="site-title">Top Book</span>
+    <img class="logo-icon" src="/assets/icons/svg/logo.svg" width="40" height="40" alt="logo">
+    <span class="spacer"></span>
+    <div class="search-field" [@expandSearch]="isExpanded ? 'expanded' : 'collapsed'">
+      <input class="search" (input)="onInput($event)" name="search-field" type="text" placeholder="Search">
+    </div>
+    <mat-icon class="open-search-icon" [ngClass]="{'expanded-icon': isExpanded}" (click)="toggleSearch()">search</mat-icon>
+    <button mat-raised-button class="add-book-btn" (click)="addBook($event)"><span>Add Book</span></button>
+  </mat-toolbar-row>
 </mat-toolbar>
