--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,53 @@
-@import "assets/scss/reset";
-@import "assets/scss/typography";
-@import "assets/scss/variables";
-@import "assets/scss/general";
+@import 'assets/scss/reset';
+@import 'assets/scss/typography';
+@import 'assets/scss/mixins';
+@import 'assets/scss/variables';
+@import 'assets/scss/general';
+@import 'assets/scss/variables';
 
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
+
+:root {
+  --color-brand: #3f51b5;
+}
+
+.scroller {
+  &::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    margin-right: -40px;
+  }
+
+  &::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--color-brand);
+    border: 0 none var(--white);
+    border-radius: 19px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: var(--color-brand);
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+    border: 0 none var(--color-white-gray);
+    border-radius: 9px;
+  }
+
+  &::-webkit-scrollbar-track:hover {
+    background-color: var(--color-white-gray);
+  }
+
+  &::-webkit-scrollbar-track:active {
+    background-color: var(--color-white-gray);
+  }
+
+  &::-webkit-scrollbar-corner {
+    background-color: transparent;
+  }
+}
