--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -1,5 +1,5 @@
 <div class="book-list">
-  @for (book of books$ | async; track book) {
+  @for (book of books()(); track book) {
       <app-book class="book" [book]="book"></app-book>
 
   } @empty {
