--- a/src/app/components/book-manipulation-modal/book-manipulation-modal.component.scss
+++ b/src/app/components/book-manipulation-modal/book-manipulation-modal.component.scss
@@ -14,6 +14,7 @@
 
   h2 {
     margin: 0;
+    padding-left: 5px;
   }
 
   .cover-image {
@@ -26,7 +27,7 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 10px;
-    padding: 10px 20px;
+    padding: 10px 0;
     border-top: 1px solid var(--strock-color);
     margin-left: 0;
 
